Update Connect Swagger (#1672)
